[tool.poetry]
name = "setup-python-cache-test"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n\u007f"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
spacy = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
